--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-ultralytics==8.3.128
-viam-sdk==0.47.0
+lap
+shapely
 torch==2.7.0
 torchvision==0.22.0
 typing-extensions
+ultralytics==8.3.128
+viam-sdk==0.47.0
